...

  return (
    <Modal visible={state.configModalVisible} transparent animationType="slide">
      <View style={styles.modalOverlay}>
        <View style={styles.modalContent}>
          <ScrollView bounces={false} showsVerticalScrollIndicator={false}>
            <Text style={styles.modalTitle}>MATCH SETUP</Text>
            <View style={styles.infoBox}>
              <Text style={styles.infoBoxText}>{state.players.length} Players</Text>
              <Text style={styles.infoBoxText}>·</Text>
              {state.isFixedTeams ? (
                <Text style={styles.infoBoxText}>{teamCount} Team{teamCount === 1 ? '' : 's'}</Text>
              ) : (
...
                >
                  {ROUND_TYPE_LEGEND}
                </Text>
              </>
            )}
            <TouchableOpacity style={styles.startMatchBtn} onPress={generateSchedule}>
              <Text style={styles.startMatchText}>GENERATE MATCH</Text>
            </TouchableOpacity>
            <TouchableOpacity
              onPress={() => dispatch({ type: 'SET_CONFIG_MODAL_VISIBLE', payload: false })}
              style={styles.closeModalBtn}
            >
              <Text style={styles.closeText}>CANCEL</Text>
...
